2013-05-07  Andreas K. Foerster  <info@akfoerster.de>

	* avtlatin1.c: new file

	* avatar.c (avt_credits): fix finding end of text

	* avatar.c (avt_put_char, avt_tell_len):
	do show SUB ('\x1A'), do not show DEL ('\x7F')

	* lua/akfavatar/utf8.lua (u8.to_latin1):
	use SUB ("\x1A") as default replacement

2013-05-01  Andreas K. Foerster  <info@akfoerster.de>

	* lua/audioplayer.lua: improved playlist support

2013-04-29  Andreas K. Foerster  <info@akfoerster.de>

	* lua/audioplayer.lua (pls): fix PLS playlist support

2013-04-06  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_put_char): improved support for UTF-16

	* lua/lua-avt.c (lavt_chdir):
	returns true or nil and an error message

2013-04-04  Andreas K. Foerster  <info@akfoerster.de>

	* avtmenu.c: animated forward/backward scrolling

2013-04-03  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-linuxfb.c (update_area_32bit, update_area_24bit)
	(update_area_16bit): new functions replace update_area_fb

------------------------------------------------------------------------

2013-03-27  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.23.1 released

2013-03-26  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_put_char, avt_say, avt_say_len):
	move interpretation of UTF-16 surrogates to a lower level

2013-03-23  Andreas K. Foerster  <info@akfoerster.de>

	* colorchooser.c (show_color): fix that works for MinGW

2013-03-21  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, version.c (avt_wide_version): new function

2013-03-20  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_wide_copyright, avt_wide_license):
	new functions

	* avatar.c (avt_input): fix display bug

2013-03-19  Andreas K. Foerster  <info@akfoerster.de>

	* filechooser.c, colorchooser.c:
	use locale dependend multibyte functions instead of iconv

2013-03-18  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_quit_encoding_function): new function