@@ -5,6 +5,7 @@ EXPORTS
     avt_ask
     avt_ask_mb
     avt_ask_l1
+    avt_ask_u8
     avt_audio_playing
     avt_avatar_image_data
     avt_avatar_image_default
@@ -33,6 +34,7 @@ EXPORTS
     avt_copyright
     avt_credits
     avt_credits_l1
+    avt_credits_u8
     avt_credits_mb
     avt_decide
     avt_delete_characters
@@ -101,6 +103,7 @@ EXPORTS
     avt_normal_text
     avt_pager
     avt_pager_l1
+    avt_pager_u8
     avt_pager_mb
     avt_palette
     avt_palette_size
@@ -126,6 +129,8 @@ EXPORTS
     avt_say_len
     avt_say_mb
     avt_say_mb_len
+    avt_say_u8
+    avt_say_u8_len
     avt_say_l1
     avt_say_l1_len
     avt_set_audio_end_key
@@ -133,6 +138,7 @@ EXPORTS
     avt_set_avatar_mode
     avt_set_avatar_name
     avt_set_avatar_name_l1
+    avt_set_avatar_name_u8
     avt_set_avatar_name_mb
     avt_set_background_color
     avt_set_balloon_color
@@ -171,6 +177,8 @@ EXPORTS
     avt_tell_mb_len
     avt_tell_l1
     avt_tell_l1_len
+    avt_tell_u8
+    avt_tell_u8_len
     avt_text_direction
     avt_ticks
     avt_toggle_fullscreen
