@@ -1,3 +1,7 @@
+2013-05-08  Andreas K. Foerster  <info@akfoerster.de>
+
+	* avtutf8.c: new file
+
 2013-05-07  Andreas K. Foerster  <info@akfoerster.de>
 
 	* avtlatin1.c: new file
